<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CalculatorApp</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="resultLabel">Result</string>
    <string name="add" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="divide" translatable="false">/</string>
    <string name="multiply" translatable="false">*</string>
    <string name="str_enter_first_input">Please enter first number</string>
    <string name="str_enter_second_input">Please enter second number</string>
    <string name="hintNumber">1234567890</string>
    <string name="str_startGame" tools:ignore="MissingTranslation">Start Game</string>
    <string name="guess_number">Your Guess</string>
    <string name="str_go">Go</string>
    <string name="str_report">Report</string>
    <string name="str_start">Start</string>

</resources>