<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/buttonMargin"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        android:gravity="center"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etFirstNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/first_number"
            android:hint="@string/first_number"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutFirst">

        <EditText
            android:id="@+id/etSecondNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/second_number"
            android:gravity="center"
            android:hint="@string/second_number"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutSecond">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_weight=".25"
            android:text="@string/add"
            android:textSize="16sp"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_weight=".25"
            android:text="@string/minus"
            android:textSize="16sp"
            app:cornerRadius="10dp"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMulti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_weight=".25"
            android:text="@string/multiply"
            android:textSize="16sp"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_weight=".25"
            android:text="@string/divide"
            android:textSize="16sp"
            app:cornerRadius="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/txtResultLabel" />

    <TextView
        android:id="@+id/txtResultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        android:padding="@dimen/normalPadding"
        android:text="@string/resultLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        android:gravity="center"
        android:hint="@string/hintNumber"
        android:padding="@dimen/normalPadding"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtResultLabel" />

    <Button
        android:id="@+id/btnGame"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/buttonMargin"
        android:padding="@dimen/normalPadding"
        android:text="@string/str_startGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>