<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normalPadding"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        android:gravity="center"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etFirstNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/first_number"
            android:hint="@string/first_number"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutFirst">

        <EditText
            android:id="@+id/etSecondNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/second_number"
            android:gravity="center"
            android:hint="@string/second_number"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/buttonMargin"
        android:layout_weight=".25"
        android:text="@string/str_start"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutSecond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutGuess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/btnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:id="@+id/etGuessNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/first_number"
            android:hint="@string/guess_number"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/buttonMargin"
        android:layout_weight=".25"
        android:text="@string/str_go"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutGuess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardCornerRadius="@dimen/enoughRadius"
        app:layout_constraintTop_toBottomOf="@id/btnGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_margin="@dimen/normalPadding"
        android:layout_marginTop="@dimen/buttonMargin"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            >

            <TextView
                android:id="@+id/txtReportLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttonMargin"
                android:gravity="center"
                android:padding="@dimen/normalPadding"
                android:text="@string/str_report"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReport"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/buttonMargin"
        android:layout_weight=".25"
        android:text="@string/str_report"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/cardReport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/txtResultLabel" />

    <TextView
        android:id="@+id/txtResultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        android:padding="@dimen/normalPadding"
        android:text="@string/resultLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        android:gravity="center"
        android:hint="@string/hintNumber"
        android:padding="@dimen/normalPadding"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtResultLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>